# MTS-Dev

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.dev.example  .env.example  .env.prod.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 78fd3faef12a_add_trades.py  aa920947995c_add_watchlist_items.py  b7c4e1d2f3a5_multi_watchlist.py  c29bb607eed8_initial_schema_users.py  d4e5f6a7b8c9_ai_signals.py  e1a2b3c4d5e6_add_alerts_table.py  f7a8b9c0d1e2_phase4_saas.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  ai.py  alerting.py  alerts.py  audit_api.py  auth.py  backtest.py  broker.py  btst.py  calendar.py  crypto.py  custom_screener.py  dashboard.py  discovery.py  dsws.py  forecast.py  golden_stock.py  historical_data.py  international_market.py  journal.py  live.py  market_pulse.py  market_sources.py  mcx.py  mcx_metals.py  ml_api.py  notifications.py  options.py  org_api.py  paper.py  portfolio.py  research.py  risk.py  router.py  scanner.py  sentiment_forecast.py  stock_of_day.py  strategy_api.py  strategy_lab.py  tax_report.py  (+6 more)
backend/app/core/: config.py  connection_manager.py  limiter.py  logging.py  scheduler.py  security.py  sentry.py
backend/app/domain/interfaces/: broker.py  market_data.py  repositories.py
backend/app/domain/models/: ai_signal.py  alert.py  api_key.py  audit.py  discovery.py  dsws.py  forecast.py  historical_candle.py  notification.py  order.py  organization.py  quote.py  recommendation.py  risk.py  screener.py  sentiment_forecast.py  stock_of_day.py  strategy.py  strategy_lab.py  trade.py  user.py  watchlist.py  watchlist_history.py  webhook.py
backend/app/domain/services/: backtester.py  risk_engine.py
backend/app/infra/ai/: claude_client.py  local_engine.py  technical.py
backend/app/infra/brokers/: aliceblue.py  dhan.py  session_store.py  simulated.py  upstox.py  zerodha.py  zerodha_enctoken.py
backend/app/infra/db/: models.py  session.py
backend/app/infra/discovery/: breakout_scanner.py  news_fetcher.py  scoring_engine.py  sentiment.py  social_stubs.py  universe.py
backend/app/infra/email/: btst_report.py  client.py  dsws_report.py  golden_stock_report.py  mcx_extreme_alert_report.py  mcx_signal_alert_report.py  mcx_trend_report.py  report.py  rsi_signal_alert_report.py  zerodha_token_reminder.py
backend/app/infra/market/: enriched_quote.py  hours.py  stock_master.py
backend/app/infra/market_data/: composite_client.py  google_finance_client.py  moneycontrol_client.py  nse_india_client.py  yfinance_client.py
backend/app/infra/mcx/: metals_news_fetcher.py  ng_indicators.py  ng_news_fetcher.py
backend/app/infra/ml/: forecaster.py  predictor.py
backend/app/infra/monitoring/: position_monitor.py
backend/app/services/: binance_service.py  btst_service.py  crypto_prediction_service.py  crypto_service.py  dsws_service.py  forecast_service.py  global_indices_prediction_service.py  global_indices_service.py  golden_stock_service.py  historical_data_service.py  international_market_service.py  mcx_ai_score_service.py  mcx_backtest_service.py  mcx_dashboard_snapshot_service.py  mcx_day_summary_service.py  mcx_extreme_alert_service.py  mcx_global_symbols_service.py  mcx_global_symbols_snapshot_service.py  mcx_metals_ai_score_service.py  mcx_metals_dashboard_snapshot_service.py  mcx_metals_prediction_service.py  mcx_metals_service.py  mcx_metals_signal_service.py  mcx_metals_trend_service.py  mcx_my_dashboard_service.py  mcx_prediction_service.py  mcx_rsi_signal_service.py  mcx_service.py  mcx_signal_service.py  mcx_trend_service.py  portfolio_ohlc_service.py  portfolio_summary_service.py  sentiment_forecast_service.py  stock_of_day_service.py  strategy_lab_service.py  usa_stocks_prediction_service.py  usa_stocks_service.py  watchlist_history_service.py  zerodha_token_service.py
backend/data/: India_Stock_Master.csv
backend/scripts/: create_admin.py  test_email.py
backend/scripts/stock_master/: build.py  clean.py  config.py  http_client.py  merge.py  sources.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin.py  test_ai.py  test_alerts.py  test_api_keys.py  test_auth.py  test_auth_extended.py  test_backtest.py  test_broker.py  test_discovery.py  test_ensemble.py  test_live.py  test_ml.py  test_paper.py  test_portfolio.py  test_risk.py  test_scanner.py
backend/tests/unit/: conftest.py  test_dsws_stats.py  test_mcx_backtest.py  test_mcx_geopolitical_risk.py  test_resolved_picks.py
frontend/: Dockerfile  (+5 more)
(+234 files in other folders)
