[project]
name = "mts-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.7",
    "motor>=3.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "yfinance>=0.2.40",
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "kiteconnect>=5.0.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "types-python-jose>=3.3.4",
    "psycopg2-binary>=2.9.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
