[project]
name = "mts-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.7",
    "motor>=3.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "yfinance>=0.2.40",
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "kiteconnect>=5.0.1",
    "slowapi>=0.1.9",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "types-python-jose>=3.3.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter-declaration idiom (`body: dict = Body(...)`, likewise
# Depends/Query/Path/etc.) relies on calling these in argument defaults --
# that's the framework's documented pattern, not the mutable-default bug B008
# looks for.
extend-immutable-calls = [
    "fastapi.Body", "fastapi.Depends", "fastapi.Query", "fastapi.Path",
    "fastapi.Header", "fastapi.Cookie", "fastapi.Form", "fastapi.File",
]

[tool.ruff.lint.per-file-ignores]
# HTML email templates: long lines come from inline CSS/markup, not Python
# style -- wrapping them risks breaking rendering for no readability gain.
"app/infra/email/report.py" = ["E501"]
"app/infra/email/golden_stock_report.py" = ["E501"]
"app/infra/email/btst_report.py" = ["E501"]
"app/services/stock_of_day_service.py" = ["E501"]
"app/infra/monitoring/position_monitor.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
